--- a/src/Pages/Events/styles/fonts.css
+++ b/src/Pages/Events/styles/fonts.css
@@ -1,4 +1,4 @@
 @font-face {
     font-family: 'Head';
-    src: local('head'), url(../assets/fonts/head.ttf) format('truetype');
+    src: local('head'), url(../assets/event1/fonts/head.ttf) format('truetype');
 }
