--- a/src/Pages/Events/styles/event1/backsvg.module.css
+++ b/src/Pages/Events/styles/event1/backsvg.module.css
@@ -42,3 +42,19 @@
     display: flex;
     justify-content: flex-end;
 }
+
+
+@media screen and (max-width: 768px) {
+    .upArrow{
+        width: 20%;
+    }
+    .downArrow{
+        width: 20%;
+    }
+    .downline{
+        width: 20%;
+    }
+    .upline{
+        width: 20%;
+    }
+}
