--- a/src/Pages/Events/styles/event1/carousel.module.css
+++ b/src/Pages/Events/styles/event1/carousel.module.css
@@ -14,3 +14,19 @@
     transform: rotate(-20deg);
     user-select: none;
 }
+.carouselContainerNoTilt{
+    margin-left: 10rem;
+    display: block;
+    text-align: right;
+    align-content: right;
+    width: 100vw;
+    height: 39vh;
+    justify-self: center;
+    align-self: center;
+    align-items: center;
+    text-align: center;
+    align-content: center;
+    /* transform: rotate(-20deg); */
+    background-color: #0D1213;
+    user-select: none;
+}
