--- a/src/Pages/Events/styles/event1/event1.module.css
+++ b/src/Pages/Events/styles/event1/event1.module.css
@@ -87,4 +87,11 @@
         margin-right: 0.5rem;
         margin-top:0.5rem;
     }
+    .text{
+        margin-top: 3rem;
+        font-size: 0.5rem;
+    }
+    .subhead{
+        font-size: 1rem;
+    }
 }
