--- a/src/Pages/Events/styles/event2/event2.module.css
+++ b/src/Pages/Events/styles/event2/event2.module.css
@@ -9,18 +9,48 @@
 .container{
     background-color: #FFF6EB;
     color: black;   
-    width: 50vw;
+    width: 45vw;
     height: 50vh;
     position: absolute;
     margin-top: 12vh;
-    margin-left: 20vw;
+    margin-left: 30vw;
     z-index: 2;
+}
+
+.containerShadow{
+    width: 60vw;
+    height: 50vh;
+    position: absolute;
+    margin-top: 15vh;
+    margin-left: 28vw;
+    z-index: 1;
 }
 
 .cardTitle{
     background-color: inherit;
+    padding:1rem;
 }
 
 .cardDescription{
     background-color: inherit;
+    padding:1rem;    
+}
+
+.gradientRed{
+    position: absolute;
+    bottom: 1.5rem;
+    right: 0rem;
+}
+
+/* Vector styling */
+
+.eventImage{
+    position: absolute;
+    bottom: 2.5rem;
+    left: 2.5rem;
+    width: 30vw;
+    height: 35vh;
+    z-index: 3;
+    background-color: white;
+    border: 2px solid #0078D4;
 }
