--- a/src/Pages/Projects/Styles/swiper.css
+++ b/src/Pages/Projects/Styles/swiper.css
@@ -1,4 +1,4 @@
-.sliderWrapper {
+.slider-wrapper {
     background: #26282A;
     z-index: 1;
 }
@@ -44,31 +44,14 @@
     --swiper-pagination-bullet-inactive-opacity: 1;
 }
 
+.swiper-slide .slide {
+    filter: blur(10px);
+    -webkit-filter: blur(10px);
+}
+
 .swiper-slide-active .slide {
     transform: translate(30px, 20px) rotate(20deg);
-    /* box-shadow: 0.25px 0.25px 19px 0.25px; */
     z-index: -1;
-}
-
-@media screen and (min-width: 640px) {
-    .swiperContainer {
-        width: 640px;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .swiperContainer {
-        width: 768px;
-    }
-}
-@media screen and (min-width: 1024px) {
-    .swiperContainer {
-        width: 1024px;
-    }
-}
-
-@media screen and (min-width:1200px) {
-    .swiperContainer {
-        width: 1200px;
-    }
+    filter: blur(0);
+    -webkit-filter: blur(0);
 }
