--- a/src/Pages/Projects/Styles/swiper.css
+++ b/src/Pages/Projects/Styles/swiper.css
@@ -26,7 +26,7 @@
     cursor: pointer;
 }
 
-.swiper-pagination {
+.projectsSwiper .swiper-pagination {
     position: absolute;
     top: 0;
     cursor: pointer;
