--- a/src/Pages/Events/styles/event1/eventCard.module.css
+++ b/src/Pages/Events/styles/event1/eventCard.module.css
@@ -70,3 +70,16 @@
         font-size: 2.5rem;
     }
 }
+
+@media screen and (max-width: 376px) {
+    .cardContainerTilt{
+        height: 16rem;
+        width: 11rem;
+    }
+    .content{
+        height: 70%;
+    }
+    .title{
+        font-size: 2.1rem;
+    }
+}
