--- a/src/Pages/Events/styles/event2/event2.module.css
+++ b/src/Pages/Events/styles/event2/event2.module.css
@@ -1,36 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap');
 
-*{
-    background-color: #0D1213;
-    margin: 0px;
-    padding: 0px;
-}
-
 /* Description card styling */
+
+.eventCard{
+    user-select: none;
+    z-index: 3;
+}
 
 .container{
     background-color: #FFF6EB;
     color: black;   
     width: 45vw;
     height: 55vh;
-    position: absolute;
-    margin-top: 12vh;
-    margin-left: 30vw;
     z-index: 2;
 }
 
-.containerShadow{
+/* .containerShadow{
     width: 60vw;
     height: 55vh;
     position: absolute;
-    margin-top: 18vh;
-    margin-left: 25vw;
-    z-index: 1;
-}
+    z-index: 2;
+} */
 
 .cardTitle{
     background-color: inherit;
     padding:1rem;
+    z-index: 2;
 }
 
 .cardDescription{
@@ -38,6 +33,7 @@
     margin: 1rem 1rem 1rem 2rem;  
     font-family: 'Poppins', sans-serif;
     font-weight: 1000;  
+    z-index: 2;
 }
 
 .gradientRed{
@@ -53,9 +49,9 @@
     bottom: 2.5rem;
     left: 4rem;
     height: 35vh;
-    z-index: 3;
     background-color: white;
     border: 2px solid #0078D4;
+    z-index: 0;
 }
 
 .vectorCross{
