--- a/src/Pages/Events/styles/event1/event1.module.css
+++ b/src/Pages/Events/styles/event1/event1.module.css
@@ -23,6 +23,7 @@
     height: 100vh;
     width: 100vw;
     user-select: none;
+    animation: fadeIn 0.5s ease-in-out;
 }
 
 .header{
@@ -47,6 +48,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
+    animation: fadeIn 0.5s ease-in-out;
 }
 
 .text{
@@ -94,10 +96,22 @@
         font-size: 1rem;
     }
     .header{
-        padding-top: 10%;
-        padding-bottom: 10%;
-        z-index: 1;
-
+        padding-top: 12%;
+        padding-bottom: 4rem;
+        z-index: 4;
     }
-    
+}
+
+.fade-in {
+	animation: fadeIn 2s;
+  	opacity: 1;
+}
+
+@keyframes fadeIn {
+  from {
+  	opacity: 0;
+  }
+  to {
+ 	opacity: 1;
+  }
 }
