--- a/src/Pages/Alumni/Styles/Polaroid.module.css
+++ b/src/Pages/Alumni/Styles/Polaroid.module.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@font-face {
+  font-family: "Khyay";
+  src: url(../../../fonts/myanmar-khyay.ttf);
+}
 *,
 *:before,
 *:after {
