--- a/src/Pages/Alumni/Styles/PolaroidGrid.module.css
+++ b/src/Pages/Alumni/Styles/PolaroidGrid.module.css
@@ -7,47 +7,51 @@
 }
 
 .container {
-  width: 100%;
-  height: 45rem;
   display: flex;
   flex-direction: row;
   background-color: #0d1213;
-  padding-top: 100px;
+  padding-top: 80px;
   color: white;
-  /* overflow: hidden; */
+  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .mainContainer {
   display: flex;
-  /* flex-direction: row; */
-  /* align-items: center; */
-  /* justify-content: space-around; */
-  /* overflow: hidden;
-   */
 }
 
-.firstContainer {
-  /* display: flex;
+.firstContainer{
+  display: flex;
   flex-direction: column;
-  align-items: center; */
+}
+
+
+.zebra{
+  width: 80%;
+  position: relative;
+  top: 7.2rem;
+  left: 5rem
 }
 
 .firstContainer h1 {
-  font-size: 6rem;
   transform: rotate(-90deg);
+  font-family: 'Cabin';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 120px;
+  line-height: 146px;
 }
 
 .secondContainer {
   display: flex;
   flex-direction: row;
-  /* align-items: center; */
   flex-wrap: wrap;
-  /* margin-left: 2.5%; */
   width: 75%;
-  height: 90%;
+  height: 75%;
   border-radius: 2rem;
   overflow-y: scroll;
-  background: radial-gradient(100% 365.83% at 0% 8.89%);
+  background: radial-gradient(100% 365.83% at 0% 8.89%, rgba(250, 57, 102, 0.27) 0%, rgba(250, 57, 102, 0.5) 0.01%, rgba(250, 57, 102, 0.435) 100%);
+  /* background: radial-gradient(100% 365.83% at 0% 8.89%); */
   box-shadow: 0px 3.95117px 3.95117px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(15.8047px);
   transform: matrix(1, 0, 0, 1, 0, 0);
@@ -58,9 +62,11 @@
 }
 
 .thirdContainer {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  width: 10%;
+  width: 10%; */
+  position: relative;
+  right: 1.7rem;
 }
 
 ::-webkit-scrollbar {
